public abstract class Snack extends Producto{

}
