@startuml
'https://plantuml.com/class-diagram
abstract class RegistroVenta{
    -clientes: Cliente<DoublyLinkList>
    -empleados: Empleado<HashMap>
    ' Ambos
    +insertar()
    +editar()
    ' Cliente
    +buscarCliente()
    +eliminarCliente()
    +listarCliente()
}

class Cliente {
    -nombres: String
    -apellidos: String
    -cédula: String
    -dirección: String
    -telf: String
}

class Empleado{
    -id: int
    -nombres: String
    -apellidos: String
    -cédula: String
    -dirección: String
    -telf: String
}

'Reservar Película

'class Taquillero

'class Reserva

'class Película

class Facturación{
    -fecha: Date
    -ruc: String
    -total: double
    +pago(orden: Orden)
}

class Orden {
    -ordenID: int
    -cliente: Cliente
    -productos: Producto[]
    +añadirProducto(producto: Producto)
    +calcularTotal()
}

' Comprar Comida
abstract class Producto{
    #nombre: String
    #precio: double
    #tamaño: String
    +precio(): double {abstract}
}

abstract class Bebida

abstract class Snack {
    +toString(): String
}

abstract class Extra{
    -snack: Snack
    -descripción: String

    +toString(): String
}

class Canguil{
    '+precio(): double
}

class Nacho{
    '+precio(): double
}

class HotDog{
    '+precio(): double
}

' Patrón de Diseño -> Decorator
Orden o- Producto: contiene

Facturación - Orden: tiene

Producto <|-- Snack
Producto <|-- Bebida

Snack <|-- Extra
Snack <--o Extra
Snack <|-- Nacho
Snack <|-- HotDog
Snack <|-- Canguil
Extra <|-- CarneMolida
Extra <|-- Chile

Bebida <|-- Vaso
Bebida <|-- Botella

Cliente -- RegistroVenta
Empleado -- RegistroVenta
RegistroVenta --> Orden: llena


@enduml